ext/envoy/server-envoy.yaml
bootstrap_extensions:
  - name: envoy.bootstrap.internal_listener
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener
admin:
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/stderr
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 14000
  profile_path: /var/lib/istio/data/senvoy.prof

# Same as Istio, from bootstrap
layered_runtime:
  layers:
    - name: global config
      static_layer:
        envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst: "true"
        envoy.reloadable_features.http_reject_path_with_fragment: "false"
        envoy.reloadable_features.internal_address: "true"
        envoy.reloadable_features.no_extension_lookup_by_name: "false"
        envoy.reloadable_features.require_strict_1xx_and_204_response_headers: "false"
        overload.global_downstream_max_connections: "2147483647"
        re2.max_program_size.error_level: "32768"
    - admin_layer: {}
      name: admin

static_resources:
  listeners:
  # hbone is the mTLS terminating H2, tunnels connections to local ports.
  - name: hbone
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 14009
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: mtls_tun
              domains:
                  - "iperfmtls.test.svc"
              routes:
                  - match:
                      prefix: "/"
                      headers:
                        - name: ":method"
                          exact_match: "POST"
                    route:
                      cluster: internal_iperf3
                      upgrade_configs:
                        - upgrade_type: CONNECT
                          connect_config:
                            allow_post: true
            - name: local_service
              domains:
                - "*"
              routes:
                - match:
                    prefix: "/"
                    headers:
                      - name: ":method"
                        exact_match: "POST"
                  route:
                    cluster: local_iperf3
                    upgrade_configs:
                      - upgrade_type: CONNECT
                        connect_config:
                          allow_post: true
          http_filters:
          - name: envoy.filters.http.router
          http2_protocol_options:
            allow_connect: true
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/etc/certs/cert-chain.pem" }
              private_key: { "filename": "/etc/certs/key.pem" }

  # hbonetun is an untrusted gateways - terminates H2-CONNECT/POST, and forwards the inner mTLS
  # to a destination - can be remote or internal.
  - name: hbonetun
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 14443
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_hbonetun
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
              route_config:
                name: hbonetun
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                          headers:
                            - name: ":method"
                              exact_match: "POST"
                        route:
                          cluster: local_iperf3
                          upgrade_configs:
                            - upgrade_type: CONNECT
                              connect_config:
                                allow_post: true
              http_filters:
                - name: envoy.filters.http.router
              http2_protocol_options:
                allow_connect: true
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                certificate_chain: { "filename": "/etc/certs/cert-chain.pem" }
                private_key: { "filename": "/etc/certs/key.pem" }

  - name: hbonec
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 14008
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                          headers:
                            - name: ":method"
                              exact_match: "POST"
                        route:
                          cluster: local_iperf3
                          upgrade_configs:
                            - upgrade_type: CONNECT
                              connect_config:
                                allow_post: true
              http_filters:
                - name: envoy.filters.http.router
              http2_protocol_options:
                allow_connect: true

  # listener_2 decrypts the mTLS TCP stream into a raw TCP stream.
  - name: inner_mtls
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 14006
    filter_chains:
    - filters:
      - name: tcp
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_stats
          cluster: local_iperf3
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/etc/certs/cert-chain.pem" }
              private_key: { "filename": "/etc/certs/key.pem" }

  # Baseline: 14034 -> Envoy -> iperf3 (all local), single hop, no TLS
  - name: local_iperf3
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 14034
    filter_chains:
      - filters:
          - name: tcp
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              stat_prefix: tcp_stats
              cluster: local_iperf3
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog

  # Baseline: 14035 -- TLS -> iperf3
  - name: local_iperf3_tls
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 14035
    filter_chains:
      - filters:
          - name: tcp
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              stat_prefix: tcp_stats
              cluster: local_iperf3
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                certificate_chain: { "filename": "/etc/certs/cert-chain.pem" }
                private_key: { "filename": "/etc/certs/key.pem" }

  clusters:
  # cluster_1 proxies the mTLS TCP stream to listener_2.
  - name: inner_hbone
    connect_timeout: 2s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options:
            allow_connect: true
    load_assignment:
      cluster_name: inner_hbone
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 14006

  # HBone decrypts the first layer of TLS ( equivalent with a GFE ). Inner stream is an mTLS
  # connection.
  - name: internal_iperf3
    connect_timeout: 2s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options:
            allow_connect: true
    load_assignment:
      cluster_name: internal_iperf3
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 14035

  # One hop, just Envoy TCP
  - name: local_iperf3
    connect_timeout: 2s
    load_assignment:
      cluster_name: local_iperf3
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 5201
